--- a/_config.yml
+++ b/_config.yml
@@ -10,13 +10,13 @@ highlighter: rouge
 # so be sure to set them if your theme uses them.
 #
 title : WindTom's Blog
-tagline: Site Tagline
+tagline: 技术，生活
 author :
-  name : WindTom
-  email : wobujianni@hotmail.com
-  github : windtom
-  twitter : windtom
-  feedburner : windtom
+  name : 
+  email : 
+  github : 
+  twitter : 
+  feedburner : 
 
 # The production_url is only used when full-domain names are needed
 # such as sitemap.txt 
