--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ highlighter: rouge
 #highlighter: pygments
 markdown: kramdown
 disqus: WindTom
-google_analytics: WindTom
+google_analytics: 
 title: WindTom
 
 defaults:
@@ -23,10 +23,10 @@ author:
   email: WindTom@github.com
   github: WindTom
   twitter: WindTom
-  pinterest: asd123
-  linkedin: asd123
-  bio: Your stylish, minimalist theme!
-  email_md5: 726351295ec82e145928582f595aa3aa
+  pinterest: 
+  linkedin: 
+  bio: 技术、生活！
+  email_md5: 
 
 rss_path: feed.xml
 categories_path: categories.html
