--- a/_config.yml
+++ b/_config.yml
@@ -59,4 +59,4 @@ excerpt_separator: "\n\n\n\n"
 gems: [jekyll-paginate]
 paginate: 5
 
-destination: E:/GitHub/WindTom.github.io
+#destination: E:/GitHub/WindTom.github.io
