--- a/_config.yml
+++ b/_config.yml
@@ -39,11 +39,11 @@ baidu_tongji_id: cf8506e0ef223e57ff6239944e5d46a4
 google_analytics_id: UA-81226908-1 # google 分析追踪id
 
 # Build settings
-markdown: kramdown
+markdown: maruku
 
-kramdown:
-  input: GFM
-  syntax_highlighter: rouge
+#kramdown:
+ # input: GFM
+  #syntax_highlighter: rouge
 
 # port
 # port: 1234
