--- a/_config.yml
+++ b/_config.yml
@@ -39,7 +39,7 @@ baidu_tongji_id: cf8506e0ef223e57ff6239944e5d46a4
 google_analytics_id: UA-81226908-1 # google 分析追踪id
 
 # Build settings
-markdown: maruku
+markdown: kramdown
 
 #kramdown:
  # input: GFM
