--- a/_config.yml
+++ b/_config.yml
@@ -40,7 +40,7 @@ google_analytics_id: UA-81226908-1 # google 分析追踪id
 
 # Build settings
 markdown: kramdown
-
+highlighter: rouge
 #kramdown:
  # input: GFM
   #syntax_highlighter: rouge
