--- a/_config.yml
+++ b/_config.yml
@@ -28,7 +28,7 @@ description_footer: 技术、生活！
 # comments
 # two ways to comment, only choose one, and use your own short name
 # 两种评论插件，选一个就好了，使用自己的 short_name
-duoshuo_shortname: #hygblog
+#duoshuo_shortname: hygblog
 disqus_shortname: windtom
 
 # statistic analysis 统计代码
